--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
                   <li>SQL</li>
                 </ul>
               </div>
+
+            
+          </div>
+	<div class="col-md-6 about-tools">
+            <p class="text-center"style="color:white">Interests, Programming Languages and Frameworks</p>
+              <div class="col-xs-6">
+                <ul>
+                  <li>Data Science</li>
+                  <li>Machine/Deep Learning</li>
+                  <li>Statistics</li>
+                  <li>Software Engineering</li>
+		  <li>Natural Language Processing</li>
+                </ul>
+              </div>
 	     <div class="col-xs-6">
                 <ul>
                   <li>Tensorflow / Keras</li>
