--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row">
           <div class="col-md-6 text-center about-info">
             
-            <img src="images/pfp.jpg">
+            <img style="height:auto;width:20%;" src="images/pfp.jpg">
             
 
             <p style="color:white;">My interest in the field of calculus & statistics from my early college days is the reason why I aspire to be a Data Scientist/Machine learning engineer. I consider myself as a person who is ready to take up any sort of new challenge and end up being successful in it. I believe my mathematical understanding of all modern concepts puts me one step ahead of others while implementing them. </p>
@@ -69,7 +69,9 @@
                   <li>Python</li>
                   <li>C/C++</li>
                   <li>JAVA</li>
-                  <li>R / Julia / SAS</li>
+                  <li>R </li>
+		<li> Julia </li>
+		<li>SAS</li>
                   <li>SQL</li>
                 </ul>
               </div>
