--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row">
           <div class="col-md-6 text-center about-info">
             
-            <img style="height:auto;width:20%;" src="images/pfp.jpg">
+            <img style="height:300;" src="images/pfp.png">
             
 
             <p style="color:white;">My interest in the field of calculus & statistics from my early college days is the reason why I aspire to be a Data Scientist/Machine learning engineer. I consider myself as a person who is ready to take up any sort of new challenge and end up being successful in it. I believe my mathematical understanding of all modern concepts puts me one step ahead of others while implementing them. </p>
