--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row">
           <div class="col-md-6 text-center about-info">
             
-            <img style="height:300;" src="images/pfp.png">
+            <img style="height:40%;width:auto;" src="images/pfp.png">
             
 
             <p style="color:white;">My interest in the field of calculus & statistics from my early college days is the reason why I aspire to be a Data Scientist/Machine learning engineer. I consider myself as a person who is ready to take up any sort of new challenge and end up being successful in it. I believe my mathematical understanding of all modern concepts puts me one step ahead of others while implementing them. </p>
@@ -62,6 +62,8 @@
                   <li>Statistics</li>
                   <li>Software Engineering</li>
 		  <li>Natural Language Processing</li>
+		<li>Computer Vision</li>
+		<li>Database Management</li>
                 </ul>
               </div>
               <div class="col-xs-6">
