Center + Tiles + Non-Hidden

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         padding: 0;
       }
       header {
-        background-color: #333;
+         background-color: #333;
         color: white;
         padding: 20px;
+        padding-top: 60px; /* Add a top padding equal to the height of the nav bar */
         text-align: center;
       }
       h1 {
