--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         padding: 0;
       }
       header {
-         background-color: #333;
+        background-color: #0077be; /* Ocean blue color */
         color: white;
         padding: 20px;
         padding-top: 60px; /* Add a top padding equal to the height of the nav bar */
@@ -21,7 +21,7 @@
         margin: 0;
       }
       nav {
-        background-color: #eee;
+        background-color: #00c3a7; /* Ocean green color */
         display: flex;
         justify-content: space-between;
         padding: 20px;
@@ -40,7 +40,7 @@
         margin: 0 10px;
       }
       nav a {
-        color: #333;
+        color: white;
         text-decoration: none;
       }
       main {
@@ -53,7 +53,7 @@
       }
       h2 {
         margin: 0 0 10px 0;
-	}
+      }
       .project {
         display: inline-block;
         width: 45%;
@@ -63,7 +63,7 @@
         justify-content: space-between;
       }
       footer {
-        background-color: #333;
+        background-color: #0077be; /* Ocean blue color */
         color: white;
         padding: 20px;
         text-align: center;
@@ -83,6 +83,7 @@
       </ul>
     </nav>
     <main>
+     
       <section id="about">
         <h2>About Me</h2>
         <div class="section-content">
@@ -113,6 +114,7 @@
               <h3>Project 2</h3>
               <p>Insert details about your second research project here.</p>
             </div>
+            </div>
           </div>
         </div>
       </section>
@@ -137,3 +139,4 @@
     </footer>
   </body>
 </html>
+
