BG Colour + Img + Button for projects

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
+        background-color: #f2f7fc; /* Light ocean blue color */
       }
       header {
         background-color: #0077be; /* Ocean blue color */
@@ -62,6 +63,17 @@
         display: flex;
         justify-content: space-between;
       }
+      .project img {
+        width: 100%;
+      }
+      .project a {
+        background-color: #00c3a7; /* Ocean green color */
+        color: white;
+        display: block;
+        padding: 10px;
+        text-align: center;
+        text-decoration: none;
+      }
       footer {
         background-color: #0077be; /* Ocean blue color */
         color: white;
@@ -83,7 +95,6 @@
       </ul>
     </nav>
     <main>
-     
       <section id="about">
         <h2>About Me</h2>
         <div class="section-content">
@@ -107,13 +118,16 @@
         <div class="section-content">
           <div class="project-row">
             <div class="project">
+              <img src="project1.jpg" alt="Project 1">
               <h3>Project 1</h3>
               <p>Insert details about your first research project here.</p>
+              <a href="#">View Project</a>
             </div>
             <div class="project">
+              <img src="project2.jpg" alt="Project 2">
               <h3>Project 2</h3>
               <p>Insert details about your second research project here.</p>
-            </div>
+              <a href="#">View Project</a>
             </div>
           </div>
         </div>
@@ -123,12 +137,16 @@
         <div class="section-content">
           <div class="project-row">
             <div class="project">
-              <h3>Project 1</h3>
+              <img src="project3.jpg" alt="Project 3">
+              <h3>Project 3</h3>
               <p>Insert details about your first academic project here.</p>
+              <a href="#">View Project</a>
             </div>
             <div class="project">
-              <h3>Project 2</h3>
+              <img src="project4.jpg" alt="Project 4">
+              <h3>Project 4</h3>
               <p>Insert details about your second academic project here.</p>
+              <a href="#">View Project</a>
             </div>
           </div>
         </div>
