alternative colours for sections

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #f2f7fc; /* Light ocean blue color */
       }
       header {
         background-color: #0077be; /* Ocean blue color */
@@ -52,6 +51,18 @@
         margin-top: 60px; /* Add a top margin equal to the height of the nav bar */
         text-align: center;
       }
+      #about {
+        background-color: #f2f7fc; /* Light ocean blue color */
+      }
+      #work-experience {
+        background-color: #b2f2e8; /* Light ocean green color */
+      }
+      #research-projects {
+        background-color: #f2d9e8; /* Light pink color */
+      }
+      #academic-projects {
+        background-color: #e8f2da; /* Light yellow color */
+      }
       h2 {
         margin: 0 0 10px 0;
       }
@@ -88,7 +99,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="#about">About Me</a></li>
+        <li><a href="#about">About Me</
         <li><a href="#work-experience">Work Experience</a></li>
         <li><a href="#research-projects">Research Projects</a></li>
         <li><a href="#academic-projects">Academic Projects</a></li>
@@ -126,6 +137,7 @@
             <div class="project">
               <img src="project2.jpg" alt="Project 2">
               <h3>Project 2</h3>
+             
               <p>Insert details about your second research project here.</p>
               <a href="#">View Project</a>
             </div>
@@ -139,13 +151,13 @@
             <div class="project">
               <img src="project3.jpg" alt="Project 3">
               <h3>Project 3</h3>
-              <p>Insert details about your first academic project here.</p>
+              <p>Insert details about your third academic project here.</p>
               <a href="#">View Project</a>
             </div>
             <div class="project">
               <img src="project4.jpg" alt="Project 4">
               <h3>Project 4</h3>
-              <p>Insert details about your second academic project here.</p>
+              <p>Insert details about your fourth academic project here.</p>
               <a href="#">View Project</a>
             </div>
           </div>
