--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: #d8ebf9; /* Light ocean blue color */">
   <head>
     <meta charset="utf-8">
     <title>Data Scientist Portfolio</title>
