updated colours and no. of projects

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: #d8ebf9; /* Light ocean blue color */">
+<html style="background-color: #0077be; /* Ocean blue color */">
   <head>
     <meta charset="utf-8">
     <title>Data Scientist Portfolio</title>
@@ -11,7 +11,6 @@
         padding: 0;
       }
       header {
-        background-color: #0077be; /* Ocean blue color */
         color: white;
         padding: 20px;
         padding-top: 60px; /* Add a top padding equal to the height of the nav bar */
@@ -52,16 +51,16 @@
         text-align: center;
       }
       #about {
-        background-color: #f2f7fc; /* Light ocean blue color */
+        background-color: #00b4d8; /* Ocean blue color */
       }
       #work-experience {
-        background-color: #b2f2e8; /* Light ocean green color */
+        background-color: #00c3a7; /* Ocean green color */
       }
       #research-projects {
-        background-color: #f2d9e8; /* Light pink color */
+        background-color: #00d8c3; /* Ocean blue-green color */
       }
       #academic-projects {
-        background-color: #e8f2da; /* Light yellow color */
+        background-color: #c3e8ff; /* Light ocean blue color */
       }
       h2 {
         margin: 0 0 10px 0;
@@ -81,7 +80,8 @@
         background-color: #00c3a7; /* Ocean green color */
         color: white;
         display: block;
-        padding: 10px;
+        padding: 5px;
+        font-size: 0.8em; /* Make the font smaller */
         text-align: center;
         text-decoration: none;
       }
@@ -98,8 +98,8 @@
       <h1>Data Scientist Portfolio</h1>
     </header>
     <nav>
-      <ul>
-        <li><a href="#about">About Me</
+    <ul>
+        <li><a href="#about">About</a></li>
         <li><a href="#work-experience">Work Experience</a></li>
         <li><a href="#research-projects">Research Projects</a></li>
         <li><a href="#academic-projects">Academic Projects</a></li>
@@ -109,19 +109,18 @@
       <section id="about">
         <h2>About Me</h2>
         <div class="section-content">
-          <img src="profile-picture.jpg" alt="Profile picture" class="profile-picture">
-          <p>Insert a brief overview of your background, education, and skills as a data scientist here.</p>
+          <p>Insert information about yourself as a data scientist here.</p>
         </div>
       </section>
       <section id="work-experience">
         <h2>Work Experience</h2>
-        <h3>Current Position</h3>
         <div class="section-content">
-          <p>Insert details about your current position as a data scientist here, including the company you work for and the projects you are working on.</p>
-        </div>
-        <h3>Past Positions</h3>
-        <div class="section-content">
-          <p>Insert details about any past positions as a data scientist here, including the companies you worked for and the projects you worked on.</p>
+          <h3>Current Position</h3>
+          <p>Insert details about your current position as a data scientist here, including the company you work for and the projects you are currently working on.</p>
+          <h3>Past Positions</h3>
+          <div class="section-content">
+            <p>Insert details about any past positions as a data scientist here, including the companies you worked for and the projects you worked on.</p>
+          </div>
         </div>
       </section>
       <section id="research-projects">
@@ -137,8 +136,21 @@
             <div class="project">
               <img src="project2.jpg" alt="Project 2">
               <h3>Project 2</h3>
-             
               <p>Insert details about your second research project here.</p>
+              <a href="#">View Project</a>
+            </div>
+          </div>
+          <div class="project-row">
+            <div class="project">
+              <img src="project3.jpg" alt="Project 3">
+              <h3>Project 3</h3>
+              <p>Insert details about your third research project here.</p>
+              <a href="#">View Project</a>
+            </div>
+            <div class="project">
+              <img src="project4.jpg" alt="Project 4">
+              <h3>Project 4</h3>
+              <p>Insert details about your fourth research project here.</p>
               <a href="#">View Project</a>
             </div>
           </div>
@@ -149,15 +161,43 @@
         <div class="section-content">
           <div class="project-row">
             <div class="project">
-              <img src="project3.jpg" alt="Project 3">
-              <h3>Project 3</h3>
-              <p>Insert details about your third academic project here.</p>
+              <img src="project5.jpg" alt="Project 5">
+              <h3>Project 5</h3>
+                            <p>Insert details about your fifth academic project here.</p>
               <a href="#">View Project</a>
             </div>
             <div class="project">
-              <img src="project4.jpg" alt="Project 4">
-              <h3>Project 4</h3>
-              <p>Insert details about your fourth academic project here.</p>
+              <img src="project6.jpg" alt="Project 6">
+              <h3>Project 6</h3>
+              <p>Insert details about your sixth academic project here.</p>
+              <a href="#">View Project</a>
+            </div>
+          </div>
+          <div class="project-row">
+            <div class="project">
+              <img src="project7.jpg" alt="Project 7">
+              <h3>Project 7</h3>
+              <p>Insert details about your seventh academic project here.</p>
+              <a href="#">View Project</a>
+            </div>
+            <div class="project">
+              <img src="project8.jpg" alt="Project 8">
+              <h3>Project 8</h3>
+              <p>Insert details about your eighth academic project here.</p>
+              <a href="#">View Project</a>
+            </div>
+          </div>
+          <div class="project-row">
+            <div class="project">
+              <img src="project9.jpg" alt="Project 9">
+              <h3>Project 9</h3>
+              <p>Insert details about your ninth academic project here.</p>
+              <a href="#">View Project</a>
+            </div>
+            <div class="project">
+              <img src="project10.jpg" alt="Project 10">
+              <h3>Project 10</h3>
+              <p>Insert details about your tenth academic project here.</p>
               <a href="#">View Project</a>
             </div>
           </div>
