Revert "new thread check"
This reverts commit 24938820ab80c3be2b6df1787d1e0ade61fa6174.

--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
       main {
         padding: 20px;
       }
-      .section {
-        margin: 20px auto;
+      section {
+        margin: 20px 0;
         margin-top: 60px; /* Add a top margin equal to the height of the nav bar */
         text-align: center;
-        max-width: 800px;
       }
       #about {
         background-color: #00b4d8; /* Ocean blue color */
@@ -66,8 +65,8 @@
      
       .section-content {
         margin: 0 auto;
-        text-align: left;
         max-width: 800px;
+        text-align: left;
       }
       h2 {
         margin: 0;
@@ -131,8 +130,12 @@
       <section id="work-experience">
         <h2>Work Experience</h2>
         <div class="section-content">
-          <h3>Data Scientist</h3>
-          <p>Insert information about your work experience as a data scientist here.</p>
+          <h3>Current Position</h3>
+          <p>Insert details about your current position as a data scientist here, including the company you work for and the projects you are currently working on.</p>
+          <h3>Past Positions</h3>
+          <div class="section-content">
+            <p>Insert details about any past positions as a data scientist here, including the companies you worked for and the projects you worked on.</p>
+          </div>
         </div>
       </section>
       <section id="research-projects">
@@ -140,23 +143,31 @@
         <div class="section-content">
           <div class="project-row">
             <div class="project">
-              <h3>Project 1</h3>
               <img src="project1.jpg" alt="Project 1">
-              <p>Insert a brief description of project 1 here.</p>
-              <a href="#">Learn More</a>
+              <h3> Project 1 </h3>
+              <p>Insert details about your first research project here.</p>
+              <a href="#">View Project</a>
             </div>
             <div class="project">
-              <h3>Project 2</h3>
               <img src="project2.jpg" alt="Project 2">
-              <p>Insert a brief description of project 2 here.</p>
-              <a href="#">Learn More</a>
+              <h3>Project 2</h3>
+              <p>Insert details about your second research project here.</p>
+              <a href="#">View Project</a>
             </div>
           </div>
-          <div class="project">
-            <h3>Project 3</h3>
-            <img src="project3.jpg" alt="Project 3">
-            <p>Insert a brief description of project 3 here.</p>
-            <a href="#">Learn More</a>
+          <div class="project-row">
+            <div class="project">
+              <img src="project3.jpg" alt="Project 3">
+              <h3>Project 3</h3>
+              <p>Insert details about your third research project here.</p>
+              <a href="#">View Project</a>
+            </div>
+            <div class="project">
+              <img src="project4.jpg" alt="Project 4">
+              <h3>Project 4</h3>
+              <p>Insert details about your fourth research project here.</p>
+              <a href="#">View Project</a>
+            </div>
           </div>
         </div>
       </section>
@@ -165,31 +176,84 @@
         <div class="section-content">
           <div class="project-row">
             <div class="project">
-              <h3>Project 4</h3>
-              <img src="project4.jpg" alt="Project 4">
-              <p>Insert a brief description of project 4 here.</p>
-              <a href="#">Learn More</a>
+              <img src="project1.jpg" alt="Project 1">
+              <h3>Project 1</h3>
+              <p>Insert details about your first academic project here.</p>
+              <a href="#">View Project</a>
             </div>
             <div class="project">
-              <h3>Project 5</h3>
-              <img src="project5.jpg" alt="Project 5">
-              <p>Insert a brief description of project 5 here.</p>
-              <a href="#">Learn More</a>
+              <img src="project2.jpg" alt="Project 2">
+              <h3>Project 2</h3>
+              <p>Insert details about your second academic project here.</p>
+              <a href="#">View Project</a>
             </div>
           </div>
           <div class="project-row">
             <div class="project">
-              <h3>Project 6</h3>
+              <img src="project3.jpg" alt="Project 3">
+              <h3>Project 3</h3>
+              <p>Insert details about your third academic project here.</p>
+              <a href="#">View Project</a>
+            </div>
+            <div class="project">
+              <img src="project4.jpg" alt="Project 4">
+              <h3>Project 4</h3>
+              <p>Insert details about your fourth academic project here.</p>
+              <a href="#">View Project</a>
+            </div>
+          </div>
+          <div class="project-row">
+            <div class="project">
+              <img src="project5.jpg" alt="Project 5">
+              <h3>Project 5</h3>
+              <p>Insert details about your fifth academic project here.</p>
+              <a href="#">View Project</a>
+            </div>
+            <div class="project">
               <img src="project6.jpg" alt="Project 6">
-              <p>Insert a brief description of project 6 here.</p>
-              <a href="#">Learn More</a>
+              <h3>Project 6</h3>
+              <p>Insert details about your sixth academic project here.</p>
+              <a href="#">View Project</a>
+            </div>
+          </div>
+          <div class="project-row">
+            <div class="project">
+              <img src="project7.jpg" alt="Project 7">
+              <h3>Project 7</h3>
+              <p>Insert details about your seventh academic project here.</p>
+              <a href="#">View Project</a>
+            </div>
+            <div class="project">
+              <img src="project8.jpg" alt="Project 8">
+              <h3>Project 8</h3>
+              <p>Insert details about your eighth academic project here.</p>
+              <a href="#">View Project</a>
+            </div>
+          </div>
+          <div class="project-row">
+            <div class="project">
+              <img src="project9.jpg" alt="Project 9">
+              <h3>Project 9</h3>
+              <p>Insert details about your ninth academic project here.</p>
+              <a href="#">View Project</a>
+            </div>
+            <div class="project">
+              <img src="project10.jpg" alt="Project 10">
+              <h3>Project 10</h3>
+              <p>Insert details about your tenth academic project here.</p>
+              <a href="#">View Project</a>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer>
-      <p>Copyright 2021</p>
+     <footer>
+      <div class="footer-links">
+        <a href="#">GitHub</a>
+        <a href="#">Email</a>
+        <a href="#">LinkedIn</a>
+      </div>
+      <p>Copyright 20XX</p>
     </footer>
   </body>
 </html>
