Revert "updated button and footer"
This reverts commit 2caf37f7018d52ed52f66b330004cad2a4a9b39a.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: #81c5d9; /* Light ocean blue color */">
+<html style="background-color: #0077be; /* Ocean blue color */">
   <head>
     <meta charset="utf-8">
     <title>Data Scientist Portfolio</title>
@@ -62,45 +62,31 @@
       #academic-projects {
         background-color: #c3e8ff; /* Light ocean blue color */
       }
-     
-      .section-content {
-        margin: 0 auto;
-        max-width: 800px;
-        text-align: left;
-      }
       h2 {
-        margin: 0;
+        margin: 0 0 10px 0;
       }
-      h3 {
-        margin: 10px 0;
-      }
-      p {
-        margin: 0;
+      .project {
+        display: inline-block;
+        width: 45%;
       }
       .project-row {
         display: flex;
         justify-content: space-between;
       }
-      .project {
-        width: 45%;
-      }
       .project img {
         width: 100%;
       }
       .project a {
-        background-color: #00b4d8; /* Ocean blue color */
-        border: none;
+        background-color: #00c3a7; /* Ocean green color */
         color: white;
-        display: inline-block;
-        font-size: 14px;
-        padding: 10px 20px;
+        display: block;
+        padding: 5px;
+        font-size: 0.8em; /* Make the font smaller */
+        text-align: center;
         text-decoration: none;
       }
-      .project a:hover {
-        background-color: #00a1c4; /* Darker ocean blue color */
-      }
       footer {
-        background-color: #00c3a7; /* Ocean green color */
+        background-color: #0077be; /* Ocean blue color */
         color: white;
         padding: 20px;
         text-align: center;
@@ -112,8 +98,7 @@
       <h1>Data Scientist Portfolio</h1>
     </header>
     <nav>
-      <h2>Navigation</h2>
-      <ul>
+    <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#work-experience">Work Experience</a></li>
         <li><a href="#research-projects">Research Projects</a></li>
@@ -144,7 +129,7 @@
           <div class="project-row">
             <div class="project">
               <img src="project1.jpg" alt="Project 1">
-              <h3> Project 1 </h3>
+              <h3>Project 1</h3>
               <p>Insert details about your first research project here.</p>
               <a href="#">View Project</a>
             </div>
@@ -176,37 +161,9 @@
         <div class="section-content">
           <div class="project-row">
             <div class="project">
-              <img src="project1.jpg" alt="Project 1">
-              <h3>Project 1</h3>
-              <p>Insert details about your first academic project here.</p>
-              <a href="#">View Project</a>
-            </div>
-            <div class="project">
-              <img src="project2.jpg" alt="Project 2">
-              <h3>Project 2</h3>
-              <p>Insert details about your second academic project here.</p>
-              <a href="#">View Project</a>
-            </div>
-          </div>
-          <div class="project-row">
-            <div class="project">
-              <img src="project3.jpg" alt="Project 3">
-              <h3>Project 3</h3>
-              <p>Insert details about your third academic project here.</p>
-              <a href="#">View Project</a>
-            </div>
-            <div class="project">
-              <img src="project4.jpg" alt="Project 4">
-              <h3>Project 4</h3>
-              <p>Insert details about your fourth academic project here.</p>
-              <a href="#">View Project</a>
-            </div>
-          </div>
-          <div class="project-row">
-            <div class="project">
               <img src="project5.jpg" alt="Project 5">
               <h3>Project 5</h3>
-              <p>Insert details about your fifth academic project here.</p>
+                            <p>Insert details about your fifth academic project here.</p>
               <a href="#">View Project</a>
             </div>
             <div class="project">
@@ -247,14 +204,8 @@
         </div>
       </section>
     </main>
-     <footer>
-      <div class="footer-links">
-        <a href="#">GitHub</a>
-        <a href="#">Email</a>
-        <a href="#">LinkedIn</a>
-      </div>
+    <footer>
       <p>Copyright 20XX</p>
     </footer>
   </body>
 </html>
-
