--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: #0077be; /* Ocean blue color */">
+<html style="background-color: #81c5d9; /* Ocean blue color */">
   <head>
     <meta charset="utf-8">
     <title>Data Scientist Portfolio</title>
@@ -107,7 +107,8 @@
     </nav>
     <main>
       <section id="about">
-        <h2>About Me</h2>
+	<img style="height:40%;width:auto;" src="images/pfp.png">
+        <h2>MUKKESH GANESH</h2>
         <div class="section-content">
           <p>Insert information about yourself as a data scientist here.</p>
         </div>
