--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         padding: 0;
       }
       header {
+	background-color:black;
         color: white;
         padding: 20px;
         padding-top: 60px; /* Add a top padding equal to the height of the nav bar */
@@ -107,7 +108,7 @@
     </nav>
     <main>
       <section id="about">
-	<img style="height:40%;width:auto;" src="images/pfp.png">
+	<img style="height:250px;width:auto;" src="images/pfp.png">
         <h2>MUKKESH GANESH</h2>
         <div class="section-content">
           <p>Insert information about yourself as a data scientist here.</p>
